Plot download menu update
Plot download menu simplification and fixing. Remove redundant entry.

--- a/public_html/resources/pages/workbench.html
+++ b/public_html/resources/pages/workbench.html
@@ -77,9 +77,10 @@ and open the template in the editor.
 
         <div id="panelRight">
             <input id="saveButton" type="button" value="Save" onclick="workbench.save();return false;" />
-            <select id="plotDownloadOptions_dropdown">
-                <option value="None" selected="selected">Plot Download Option...</option>
-            </select>
+
+            <span class="label">Plot Download
+                <select id="plotDownloadOptions_dropdown"></select>
+            </span>
         </div>
 
     </div>
