Added plot download option
Added plot download option and shuffling elements to match the controls

--- a/public_html/resources/pages/help.html
+++ b/public_html/resources/pages/help.html
@@ -181,12 +181,12 @@
                         <th>Explanation</th>
                     </tr>
                     <tr>
-                        <td>Pop-Up Menu</td>
-                        <td class="row"> Some predefined scenarios</td>
-                    </tr>
-                    <tr>
                         <td>Load</td>
                         <td class="row">Loads a previously saved scenario. Usually to inspect it.</td>
+                    </tr>
+                    <tr>
+                        <td>Pop-Up Menu</td>
+                        <td class="row"> Some predefined scenarios</td>
                     </tr>
                     <tr>
                         <td>Run</td>
@@ -195,6 +195,10 @@
                     <tr>
                         <td>Save</td>
                         <td class="row">Saves current simulated scenario.</td>
+                    </tr>
+                    <tr>
+                        <td>Plot Download</td>
+                        <td class="row">Dimensions of the .svg when downloading plots</td>
                     </tr>
                 </table>
             </div>
