--- a/public_html/resources/pages/workbench.html
+++ b/public_html/resources/pages/workbench.html
@@ -67,6 +67,7 @@ and open the template in the editor.
             <select id="samples_dropdown">
                 <option value="None" selected="selected">Samples...</option>
             </select>
+        <input id="datasetsButton" type="button" value="Datasets" onclick="workbench.downloaDatasets();return false;" />
         </div>
 
 
