Removing old samples loading.
Old samples not used anymore.

--- a/public_html/resources/pages/workbench.html
+++ b/public_html/resources/pages/workbench.html
@@ -170,11 +170,11 @@ and open the template in the editor.
 
 
     <!-- Loading the samples component -->
-    <script type="text/javascript" src="../scripts/samples/sample0.js"></script>
+    <!-- <script type="text/javascript" src="../scripts/samples/sample0.js"></script>
     <script type="text/javascript" src="../scripts/samples/sample1.js"></script>
     <script type="text/javascript" src="../scripts/samples/sample2.js"></script>
     <script type="text/javascript" src="../scripts/samples/sample3.js"></script>
-    <script type="text/javascript" src="../scripts/samples/sample4.js"></script>
+    <script type="text/javascript" src="../scripts/samples/sample4.js"></script> -->
 
     <!-- Application components -->
     <script type="text/javascript" src="../classes/Sample.js"></script>
