--- a/public_html/resources/pages/workbench.html
+++ b/public_html/resources/pages/workbench.html
@@ -230,6 +230,7 @@ and open the template in the editor.
     <script type="text/javascript" src="../classes/Visualiser.js"></script>
 
     <!-- Loading simulator -->
+    <script type="text/javascript" src="../classes/Sensor.js"></script>
     <script type="text/javascript" src="../classes/Stakeholder.js"></script>
     <script type="text/javascript" src="../classes/StakeholderHack1.js"></script>
     <script type="text/javascript" src="../classes/Movable.js"></script>
