Fixing English semantic error
Brake

--- a/public_html/resources/pages/workbench.html
+++ b/public_html/resources/pages/workbench.html
@@ -137,19 +137,19 @@ and open the template in the editor.
 
 
 
-            <!-- Probability Random Break Section-->
-            <span class="label">Probability Random Break <br> [Recommended 0.1+]</span>
+            <!-- Probability Random Brake Section-->
+            <span class="label">Probability Random Brake <br> [Recommended 0.1+]</span>
 
-            <input class="inputRadio" type="radio" id="controlProbabilityRandomBreakUniform"
+            <input class="inputRadio" type="radio" id="controlProbabilityRandomBrakeUniform"
                 name="proabilityUnderNormal" checked>
-            <label class="labelRadio" for="controlProbabilityRandomBreakUniform">Uniform</label>
-            <input class="input" type="text" id="controlProbabilityRandomBreak"><br>
+            <label class="labelRadio" for="controlProbabilityRandomBrakeUniform">Uniform</label>
+            <input class="input" type="text" id="controlProbabilityRandomBrake"><br>
 
             <span class="label"></span>
-            <input class="inputRadio" type="radio" id="controlProbabilityRandomBreakMultiple" name="proabilityUnderNormal">
+            <input class="inputRadio" type="radio" id="controlProbabilityRandomBrakeMultiple" name="proabilityUnderNormal">
             <label class="labelRadio" for="controlProbabilityMultiple">Multiple</label><br>
 
-            <!-- Scrollable multiple probability random Break-->
+            <!-- Scrollable multiple probability random Brake-->
             <div class="scroll" id="controlProbabilityMultipleValue">
             </div>
         </div>
@@ -172,19 +172,19 @@ and open the template in the editor.
 
 
 
-            <!-- Probability Random Break Section-->
-            <span class="label">Probability Random Break <br> [Recommended 0.1+]</span>
+            <!-- Probability Random Brake Section-->
+            <span class="label">Probability Random Brake <br> [Recommended 0.1+]</span>
 
-            <input class="inputRadio" type="radio" id="attackProbabilityRandomBreakUniform" name="proabilityUnderAttack"
+            <input class="inputRadio" type="radio" id="attackProbabilityRandomBrakeUniform" name="proabilityUnderAttack"
                 checked>
-            <label class="labelRadio" for="attackProbabilityRandomBreakUniform">Uniform</label>
-            <input class="input" type="text" id="attackProbabilityRandomBreak"><br>
+            <label class="labelRadio" for="attackProbabilityRandomBrakeUniform">Uniform</label>
+            <input class="input" type="text" id="attackProbabilityRandomBrake"><br>
 
             <span class="label"></span>
-            <input class="inputRadio" type="radio" id="attackProbabilityRandomBreakMultiple" name="proabilityUnderAttack">
+            <input class="inputRadio" type="radio" id="attackProbabilityRandomBrakeMultiple" name="proabilityUnderAttack">
             <label class="labelRadio" for="attackProbabilityMultiple">Multiple</label><br>
 
-            <!-- Scrollable multiple probability random Break-->
+            <!-- Scrollable multiple probability random Brake-->
             <div class="scroll" id="attackProbabilityMultipleValue">
             </div>
 
